<resources>
    <string name="app_name">SwipeAssignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there">Hi, There</string>
    <string name="what_are_you_looking_for_today">What are you looking for today?</string>
    <string name="search">Search</string>
    <string name="add_product">Add Product</string>
    <string name="view_product">View Product</string>
    <string name="no_internet_available_please_connect_to_the_internet">No Internet available. Please connect to the internet</string>
    <string name="add_new_product">Add New Product</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_product_type">Enter Product Type</string>
    <string name="enter_product_price">Enter Product Price</string>
    <string name="enter_product__price">Enter product price</string>
    <string name="enter__product_tax">Enter product tax</string>
    <string name="enter_product_tax">Enter Product Tax</string>
    <string name="save">Save</string>
    <string name="game">Game</string>
    <string name="furniture">Furniture</string>
    <string name="electronics">Electronics</string>
    <string name="please_select_a_type">Please select a type</string>
    <string name="enter_product_name_">Enter product name</string>
</resources>