<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    tools:context=".product.ui.fragment.AddProductFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/carDetailsAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
        app:elevation="@dimen/dimen_0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/carDetailsToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:maxHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtToolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/add_new_product"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:visibility="visible" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/carDetailsConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/dimen_40dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/carImageCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    app:cardCornerRadius="@dimen/dimen_14dp"
                    app:cardElevation="@dimen/dimen_0dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/productImage"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        app:srcCompat="@drawable/product_placeholder"
                        tools:scaleType="fitCenter" />

                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/carNameHeadingTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:text="@string/enter_product_name"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/odoMeterCardView" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/carNameCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_2dp"
                    app:cardBackgroundColor="@color/app_background_color"
                    app:cardCornerRadius="@dimen/dimen_8dp"
                    app:cardElevation="@dimen/dimen_0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/carNameHeadingTxt">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/productName"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:inputType="textCapSentences"
                        android:drawableEnd="@drawable/ic_edit_pen_icon"
                        android:gravity="center_vertical"
                        android:hint="@string/enter_product_name_"
                        android:paddingHorizontal="@dimen/dimen_12dp"
                        android:textColor="@color/imageBlackOff"
                        android:textColorHint="@color/textHintColor"
                        android:textSize="16sp"
                        app:drawableTint="@color/colorPrimaryNew" />

                </androidx.cardview.widget.CardView>


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/odoMeterHeadingTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_15dp"
                    android:text="@string/enter_product_type"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/carImageCardView" />

                <HorizontalScrollView
                    android:id="@+id/odoMeterCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_2dp"
                    android:scrollbars="none"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/odoMeterHeadingTxt">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/editableSelectionLyt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:minHeight="@dimen/dimen_52dp"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/gameSelection"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/dimen_20dp"
                                android:background="@drawable/game_50dp_unselected"
                                android:drawablePadding="@dimen/dimen_6dp"
                                android:gravity="center"
                                android:paddingHorizontal="@dimen/dimen_20dp"
                                android:paddingVertical="@dimen/dimen_7dp"
                                android:text="@string/game"
                                android:textAlignment="center"
                                android:textColor="@color/gamecolor"
                                android:textSize="12sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/furnitureSelectionTxt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/dimen_16dp"
                                android:background="@drawable/furniture_bg_50dp_unselected"
                                android:drawablePadding="@dimen/dimen_6dp"
                                android:gravity="center"
                                android:paddingHorizontal="@dimen/dimen_20dp"
                                android:paddingVertical="@dimen/dimen_7dp"
                                android:text="@string/furniture"
                                android:textAlignment="center"
                                android:textColor="@color/furnitureColor"
                                android:textSize="12sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/electronnicSelectionTxt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/dimen_16dp"
                                android:background="@drawable/electronic_bg_50dp_unselected"
                                android:drawablePadding="@dimen/dimen_6dp"
                                android:gravity="center"
                                android:paddingHorizontal="@dimen/dimen_20dp"
                                android:paddingVertical="@dimen/dimen_7dp"
                                android:text="@string/electronics"
                                android:textAlignment="center"
                                android:textColor="@color/electronicCOlor"
                                android:textSize="12sp" />

                        </LinearLayout>

                    </LinearLayout>

                </HorizontalScrollView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/categoryErrorTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20dp"
                    android:text="@string/please_select_a_type"
                    android:textColor="@color/colorRetryRed"
                    android:textSize="12sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/odoMeterCardView" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/enterPriceHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_15dp"
                    android:text="@string/enter_product_price"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/carNameCardView" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/priceCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_20dp"
                    app:cardBackgroundColor="@color/app_background_color"
                    app:cardCornerRadius="@dimen/dimen_8dp"
                    app:cardElevation="@dimen/dimen_0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/enterPriceHeading">


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/enterPrice"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:inputType="numberDecimal"
                        android:drawableEnd="@drawable/ic_edit_pen_icon"
                        android:gravity="center_vertical"
                        android:hint="@string/enter_product__price"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:paddingHorizontal="@dimen/dimen_12dp"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textHintColor"
                        android:textSize="16sp"
                        app:drawableTint="@color/colorPrimaryNew" />
                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/enterTaxHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20dp"

                    android:layout_marginTop="15dp"
                    android:text="@string/enter_product_tax"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/priceCard" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/tacCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_20dp"
                    app:cardBackgroundColor="@color/app_background_color"
                    app:cardCornerRadius="@dimen/dimen_8dp"
                    android:inputType="numberDecimal"
                    app:cardElevation="@dimen/dimen_0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/enterTaxHeading">


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/enterTax"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawableEnd="@drawable/ic_edit_pen_icon"
                        android:gravity="center_vertical"
                        android:hint="@string/enter__product_tax"
                        android:maxLength="3"
                        android:maxLines="1"
                        android:inputType="numberDecimal"
                        android:paddingHorizontal="@dimen/dimen_12dp"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textHintColor"
                        android:textSize="16sp"
                        app:drawableTint="@color/colorPrimaryNew" />
                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/saveProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_18dp"
                    android:layout_marginEnd="@dimen/dimen_20dp"
                    android:background="@drawable/button_bg_gradient_25dp"
                    android:enabled="true"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/dimen_33dp"
                    android:paddingVertical="@dimen/dimen_14dp"
                    android:text="@string/save"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tacCard" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/colorAccentNew"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>